k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-devops-capstone
  labels:
    app: cloud-devops-capstone
spec:
  selector:
    matchLabels:
      app: cloud-devops-capstone
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  progressDeadlineSeconds: 1200
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: cloud-devops-capstone
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - cloud-devops-capstone
              - key: "temporary"
                operator: In
                values:
                - "true"
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: udacity
        image: henokhm/cloud-devops-capstone
        command: [
          "npm", "start"
          ]
        imagePullPolicy: Always
        resources:
          limits:
            memory: 64Mi
            cpu: 250m
          requests:
            memory: 32Mi
            cpu: 200m
        ports:
        - containerPort: 5000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            scheme: HTTP
            port: 5000
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-devops-capstone
spec:
  type: LoadBalancer
  selector:
    app: cloud-devops-capstone
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-devops-capstone
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: "ingress-nginx"
    #Limit app to my personal IP
    #nginx.ingress.kubernetes.io/whitelist-source-range: "IP/32"

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: cloud-devops-capstone
          servicePort: 80
